--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -41,12 +41,34 @@
           "additionalAuthenticationProviders": []
         }
       }
+    },
+    "searchNeptune": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "artifactstoreSearchNeptune",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "storage": {
-    "anycompanyArtifacts": {
+    "storageArtifacts": {
       "service": "S3",
       "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
+  },
+  "function": {
+    "artifactstoreSearchNeptune": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
       "dependsOn": []
     }
   }
